Adding changes from working with Dale DEc 17

--- a/JSPsychHelloWorld.html
+++ b/JSPsychHelloWorld.html
@@ -5,18 +5,26 @@
     <title>Number Line Estimation Task</title>
     <script src="jspsych/jspsych.js"></script>
     <script src="jspsych/plugin-html-keyboard-response.js"></script> 
-    <script type="module" src="/src/plugin-number-line.js"></script>
+    <script src="./plugin-number-line.js"></script>
+
+    <script src="./dep/vector/dist/elements/svg/shape.js"></script>
+    <script src="./dep/vector/dist/elements/svg/circle.js"></script>
+    <script src="./dep/vector/dist/elements/svg/line.js"></script>
+
+    <link rel="stylesheet" href="./main.cs" />
     <link href="jspsych/jspsych.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width,initial-scale=1"> 
   </head>
   <body>
+
+
     <!-- SCRIPTS -->
-    <script type="module" src="/main.js" ></script> 
-    <script type="module" src="./dep/dist/examples/math/line-defined-by-two-points.js"></script>
+    <!-- <script type="module" src="/main.js" ></script> 
+    <script type="module" src="./dep/dist/examples/math/line-defined-by-two-points.js"></script> -->
 
     <!-- STYLESHEET -->
-    <link rel="stylesheet" href="./dep/css/library.css">
-    <link rel="stylesheet" href="/main.cs" />
+    <!-- <link rel="stylesheet" href="./dep/css/library.css"> -->
+   
 
     <!-- SVG -->
     <div id="jsPsychNumberLine"></div>
